# lab-rs

./: Cargo.toml  README.md
actor-model/: Cargo.toml
actor-model/src/: service.rs
auth/: Cargo.toml
auth/src/: main.rs
compound-interest/: Cargo.toml
compound-interest/src/: calculator.rs  currency.rs  lib.rs  macros.rs  main.rs  types.rs
lab-axum/: Cargo.toml
lab-axum/src/: lib.rs  main.rs
lab-axum/src/db/: data.rs
lab-axum/src/model/: todo.rs
lab-channels/: Cargo.toml
lab-channels/src/: main.rs
lab-http/: Cargo.toml
