[package]
name = "labrs-experiment"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[workspace.dependencies]
bon = "2.3.0"
derive_more = { version = "1.0.0", features = ["full"] }
thiserror = "1.0.63"
strum = "0.26.3"
strum_macros = "0.26"
serde = { version = "1.0.209", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = "1.39.3"
