[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentity = "1.12.0"
axum = "0.7.4"
http = "1.0.0"
jwt = "0.16.0"
serde = "1.0.196"
tokio = {version = "1.35.1", features = ["full"]}
tower = "0.4.13"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
